# organizeit2

./: .bumpversion.cfg  .copier-answers.yml  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
examples/: example.zorp
organizeit2/: __init__.py  cli.py  core.py  fsspec_types.py  types.py
organizeit2/config/: __init__.py  base.py  config.py  utils.py
organizeit2/tests/: conftest.py  test_all.py  test_backends.py  test_cli.py  test_core.py  test_e2e.py  test_fsspec_types.py  test_types.py
