[build-system]
requires = ["setuptools", "wheel"]
build-backend="setuptools.build_meta"

[project]
name = "organizeit2"
authors = [{name = "Tim Paine", email = "t.paine154@gmail.com"}]
description="Engage with Zorp"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.1.0"
requires-python = ">=3.8"
keywords = [
    "some",
    "keywords",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy",
]

[project.urls]
Repository = "https://github.com/timkpaine/organizeit2"
Homepage = "https://github.com/timkpaine/organizeit2"

[project.optional-dependencies]
develop = [
    "bump2version",
    "check-manifest",
    "isort",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "wheel",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.check-manifest]
ignore = []

[tool.ruff]
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.isort]
line_length = 120
known_first_party = 'pydantic'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[tool.pytest.ini_options]
asyncio_mode = 'strict'
testpaths = 'organizeit2/tests'
