[build-system]
requires = ["hatchling"]
build-backend="hatchling.build"

[project]
name = "organizeit2"
authors = [{name = "the organizeit2 authors", email = "3105306+timkpaine@users.noreply.github.com"}]
description = "Engage with Zorp!"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.4.0"
requires-python = ">=3.9"
keywords = [
    "pydantic",
    "filesystem",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ccflow",
    "fsspec",
]

[project.optional-dependencies]
cli = [
    "rich",
    "typer",
]
develop = [
    "build",
    "bump-my-version",
    "check-manifest",
    "hatchling",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "wheel",
    # backends
    "s3fs",
    # cli
    "rich",
    "typer"
]

[project.scripts]
organizeit = "organizeit2.cli:main"

[project.urls]
Repository = "https://github.com/timkpaine/organizeit2"
Homepage = "https://github.com/timkpaine/organizeit2"

[tool.bumpversion]
current_version = "0.4.0"
commit = true
tag = false 

[[tool.bumpversion.files]]
filename = "organizeit2/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.check-manifest]
ignore = [
    ".copier-answers.yml",
    "Makefile",
    "docs/**/*",
]

[tool.coverage.run]
branch = true
omit = [
    "organizeit2/tests/integration/",
]
[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build]
artifacts = []

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = ["organizeit2"]

[tool.hatch.build.targets.wheel]
packages = ["organizeit2"]

[tool.hatch.build.targets.wheel.shared-data]

[tool.pytest.ini_options]
addopts = ["-vvv", "--junitxml=junit.xml"]
asyncio_mode = "strict"
testpaths = "organizeit2/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["organizeit2"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
